<resources>
    <string name="app_name">Mobile Brand Information</string>
    <string name="xiaomiText">شرکت شیائومی یک شرکت خصوصی الکترونیک و نرم افزاری چینی است که شعار آن تولید تکنولوژی ارزان است که مقر آن در پکن واقع شده است. شیائومی در حال ساخت، توسعه و فروش گوشی های هوشمند، برنامه های موبایل، لپ تاپ ها، لوازم الکترونیکی مصرفی و لوازم جانبی موبایل است.

شیائومی از زمان انتشار نخستین گوشی هوشمند خود که در ماه اوت 2011 میلادی عرضه کرد سهم قابل توجهی از بازار، به خصوص در چین را بدست آورد و به توسعه وسیع تر لوازم الکترونیکی مصرفی و  یک سیستم عامل هوشمند بنام IOT  پرداخت و مسیر توسعه را ادامه داد. این شرکت بیش از 8000 کارمند دارد که بیشتر آن ها در کشور پهناور چین و مابقی در کشورهای هند، مالزی، سنگاپور و در حال گسترش به اندونزی، فیلیپین و آفریقای جنوبی است.</string>
    <string name="samsungText">سامسونگ ( Samsung) یک شرکت کنگلومرا (خوشه‌ای) چند ملیتی کره جنوبی می باشد که مقر اصلی این شرکت به نام شهر سامسونگ (Samsung Town) به صورت یک مرکز اداری و پارک فناوری اطلاعات  در شهر  سئول، کره جنوبی واقع می باشد. این شرکت دارای  چندین شرکت تابع و همچنین زیر مجموعه هایی در صنایع  مختلف می باشد،  که اکثر آنها تحت نام برند سامسونگ با هم متحد شده اند و این شرکت به عنوان بزرگترین شرکت چایبول (شرکت کنگلومرای کره جنوبی( شناخته می شود.
  سامسونگ اکنون با تجزیه شرکت هیوندای (Hyundai Group) به عنوان بزرگترین گروه تجاری کره جنوبی شناخته می شود که محصولات  شرکت های وابسته آن تقریباً یک پنجم از کل صادرات کره جنوبی را تشکیل می دهد و درآمد سامسونگ برابر با 17٪ از  1.082 میلیارد دلار تولید ناخالص داخلی کره جنوبی را شامل می شود. سامسونگ از سال 2017 میلادی به عنوان ششمین برند با ارزش جهان شناخته می شود.</string>
    <string name="appleText">شرکت اپل یک شرکت چند ملیتی آمریکایی است که در زمینهٔ طراحی و ساخت لوازم الکترونیکی مصرفی و نرم‌افزارکامپیوتر فعالیت می‌کند. این شرکت ابتدا با نام شرکت کامپیوتری اپل (.Apple Computer Inc) در شهر کوپرتینو در ایالت کالیفورنیا، واقع در دره سیلیکون کشور آمریکا تأسیس شد. این شرکت در دههٔ هفتاد میلادی با معرفی ریزرایانه‌های اپل I، اپل II، اپل III و پس از آن مکینتاش به بازار به آغاز و گسترش نوعی رایانه شخصی کمک فراوانی نمود.

اپل معمولاً به تولید سخت‌افزارهای نوین و دارای طراحی صحیح معروف است. از محصولات سخت‌افزاری این شرکت می‌توان آیپد، آی‌مک، مک بوکو آی پاد و آیفون و اپل واچ و اپل تی وی را نام برد. همچنین این شرکت در زمینهٔ تولید نرم‌افزار هم فعالیت دارد. نرم‌افزارهای آی‌تونز، آی‌لایف، آی ورک و سیستم‌عامل مورد استفاده در رایانه‌های این شرکت مک اواس ده نیز نمونه‌هایی از فعالیت نرم‌افزاری این شرکت هستند.

مدیریت اجرایی این شرکت برعهده استیو جابز بوده‌است. وی یک ماه قبل از مرگش از ریاست این شرکت کناره‌گیری کرد و به جای آن تیم کوکریاست این شرکت را بر عهده گرفته‌است. استیو جابز همراه با استیو وزنیاک و رونالد وین این شرکت را بنیانگذاری کردند. رونالد وین در کمتر از دو هفته پس از تأسیس شرکت سهام خود را به جابز و وزنیاک واگذار کرد.

شرکت اپل در سال ۲۰۱۷ برای دهمین سال متوالی، عنوان تحسین شده‌ترین شرکت فناوری اطلاعات در جهان را به خود اختصاص داد.

این شرکت از سوی مجله فوربز یکی از مشهورترین مجله‌های اقتصادی آمریکا و جهان برای هشتمین سال پیاپی (از سال ۲۰۱۱ تا سال ۲۰۱۸) به عنوان با ارزش‌ترین برند جهان انتخاب شد.</string>
    <string name="nokiaText">
        نوکیا شرکت ارتباطی فنلاندی است که به صورت بین المللی در سراسر دنیا فعالیت میکند. مقر این شرکت در اسپو نزدیک به هلسینکی فنلاند است. در سال ۲۰۱۷ بیش از ۱۰۲ هزار نفر در ۱۰۰ کشور دنیا در نوکیا مشغول به کار هستند و این شرکت در حال تجارت با بیش از ۱۳۰ کشور بوده و درامدی بالغ بر ۲۳ میلیارد یورو دارد.

این شرکت بیش از ۱۰۰ سال کاغذ و چکمه های پلاستیکی تولید میکرده است و تنها از حدود ۱۰سال قبل به سوی فن و تکنیک تلفن سوق داده شده است. حدود یک دهه پیش این احتمال می رفت که نوکیا از راس تجارت جهانی کنار برود این مطلب در تجارت تلفن مساله جدیدی بود و اریکسون (Ericsson) قصد تصاحب آنرا داشت اما نوکیا کنار نرفت و هم اکنون موقعیت آن حتی از اریکسون هم بهتر است.

این شرکت در ابتدا تحت فعالیت کاغذسازی آغاز به کار کرد و سپس به تولید لاستیک و کابل رسید. تا آنکه در دهه ۹۰ میلادی تمرکز خود را روی زیرساختهای ارتباطی در مقیاس وسیع، توسعه تکنولوژی و صدور مجوزها کرد. نوکیا نقش برجسته ای در توسعه صنعت تکنولوژی تلفنهای همراه داشت و در توسعه GSM، شبکه پرسرعت 3G و استانداردهای LTE (و اخیرا شبکه 5G) نقش داشته است و به داشتن بیشترین میزان فروشندگان گوشی هوشمند در سراسر دنیا معروف است.
    </string>
    <string name="huaweiText">
        شرکت فناوری هواوی یک کمپانی چند ملیتی چینی است که در زمینه‌ی تجهیزات شبکه و مخابرات فعالیت می‌کند. این شرکت در سال ۲۰۱۲ از شرکت سونی اریکسون پیشی گرفت و امروزه به‌عنوان بزرگ‌ترین ارائه‌دهنده‌ی سرویس‌های ارتباطی شناخته می‌شود. شرکت هواوی در سال ۱۹۸۷ توسط رن ژنگفی، مهندس سابق ارتش آزادی‌بخش خلق چین راه‌اندازی شد. این شرکت در ابتدای تأسیس خود بر تولید سویچ‌های تلفن تمرکز کرده بود؛ اما امروزه کسب‌و‌کار خود را به ساخت شبکه‌ها و تجهیزات ارتباطی و ارائه‌ی خدمات عملیاتی و مشاوره به شرکت‌های چینی و خارجی گسترش داده است. این شرکت تا سال ۲۰۱۶ حدود ۱۸۰ هزار کارمند در سراسر جهان داشت. شرکت هواوی اهمیت زیادی به تحقیق و توسعه می‌دهد؛ به‌طوری که بیش از ۲۱ مرکز تحقیقاتی در کشورهایی مانند چین، آمریکا، کانادا، انگلستان، پاکستان، فنلاند، فرانسه، بلژیک، آلمان و ... دارد. بیش از ۷۶ هزار نفر تنها در بخش تحقیق و توسعه‌ی این شرکت‌ مشغول به کار هستند.
    </string>
    <string name="motorolaText">
        شرکت موتورولا یک شرکت مخابراتی چند ملیتی است که در سال ۱۹۲۸ در شامبورگ، ایلینوی با نام Galvin Manufacturing بنیان‌گذاری شد. این شرکت ابتدا در طراحی و فروش تجهیزات بی‌سیم شبکه مانند ایستگاه‌های مبتنی بر انتقال سلولی و تقویت‌کننده‌های سیگنال فعالیت داشته است. این شرکت با تولید رادیوهای مخصوص ماشین به شهرت رسید و بعد از آن با نام موتورولا شناخته شد. کلمه‌ی موتورولا با ادغام دو کلمه‌ ساخته شده است. کلمه‌ی «motor» که نشان دهنده‌ی موتور ماشین است و «ola» که از ویکتورلا گرفته شده است. شرکت موتورولا اختراعات زیادی را در زمینه‌ی فناوری‌های مرتبط با رادیو ارائه کرده و باعث انقلاب در صنعت رایانه‌ها شده است. این شرکت در سال‌های ۲۰۰۷ تا ۲۰۰۹ مبلغ ۴.۳ میلیارد دلار از دارایی خود را از دست داد. به همین دلیل در ژانویه سال ۲۰۱۱ به دو شرکت موتورولا موبیلیتی (Motorola Mobility) و موتورولا سلوشنز (Motorola Solutions) تقسیم شد. موتورولا سلوشنز به‌عنوان جانشین اصلی شرکت شناخته می‌شود. موتورولا موبیلیتی که در زمینه‌ی تولید موبایل فعالیت میکند، در سال ۲۰۱۴ به شرکت لنوو (Lenovo) فروخته شد.
    </string>
    <string name="firstName">اطلاعات برند موبایل ها</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="samsung">Samsung</string>
    <string name="apple">Apple</string>
    <string name="nokia">Nokia</string>
    <string name="huawei">Huawei</string>
    <string name="motorola">Motorola</string>
</resources>